--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -49,7 +49,7 @@
         {% endif %}
 
       </ul>
-      <a href="/reservation"><button type="button" class="btn btn-outline-light text-dark">My Reservations</button></a>
+      <a href="/reservation"><button type="button" class="btn btn-outline-light text-dark">Phòng của tôi</button></a>
       <a href="#"><button type="button" class="btn btn-outline-light text-dark">Hỗ Trợ</button></a>
       <a href="#"><button type="button" class="btn btn-outline-light text-dark">Hợp tác</button></a>
     </div>
