--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -156,7 +156,7 @@
                             <div class="">
                                 <div class="d-flex header-title">
                                     <div class="mt-1">
-                                        <h5><a href="{{ url_for('booking_detail', hotel_id=1) }}">{{ r.name }}</a></h5>
+                                        <h5><a href="/booking-detail/{{r.id}}">{{ r.name }}</a></h5>
                                         <ul class="no-bullet m-0 p-0">
                                             <li>
                                                 <span class="text-small">1 giường đôi lớn</span>
