--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -22,7 +22,6 @@
                                 placeholder="Tên Phòng" aria-expanded="false" name="name-room" />
                         </div>
 
-                        <!-- ngày nhận - ngày trả phòng -->
                         <div class="row justify-content-center align-items-center text-center">
                             <div class="col-md-3 ">
                                 <label for="checkin-date" class="form-label title-color"><i class="fa-solid fa-calendar"
@@ -120,7 +119,9 @@
                 <div class="border-booking">
                     <div class="d-flex p-3">
                         <div class="item-2 p-1 me-3 container-image">
-                            <img src="{{ r.image }}" alt="Khach san" class="mr-2">
+                            <a href="/booking-detail/{{ r.id }}">
+                                <img src="{{ r.image }}" alt="Khach san" class="mr-2">
+                            </a>
                         </div>
                         <div class="d-flex flex-column item-7">
                             <div class="d-flex  header-title">
