--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -106,12 +106,12 @@
                         <div class="d-flex justify-content-around">
                             <div>
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">Họ và tên</label>
-                                    <input type="text" class="form-control" id="name" aria-describedby="name" name="name"
-                                        placeholder="Nhập họ và tên...">
+                                    <label for="exampleInputEmail1">CCCD</label>
+                                    <input type="number" onblur="searchCustomer(this, 0)" class="form-control" id="cccd" name="cccd"
+                                        placeholder="Nhập căn cước công dân...">
                                 </div>
                             </div>
-                            <div>
+                                <div>
                                 <div class="form-group">
                                     <label for="exampleInputEmail1">Số điện thoại</label>
                                     <input type="number" class="form-control" id="phone" name="phone"
@@ -124,9 +124,9 @@
                         <div class="d-flex justify-content-around">
                             <div>
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">CCCD</label>
-                                    <input type="number" class="form-control" id="cccd" name="cccd"
-                                        placeholder="Nhập căn cước công dân...">
+                                    <label for="exampleInputEmail1">Họ và tên</label>
+                                    <input type="text" class="form-control" id="name" aria-describedby="name" name="name"
+                                        placeholder="Nhập họ và tên...">
                                 </div>
                             </div>
                             <div>
@@ -229,9 +229,9 @@
                     <div class="d-flex justify-content-around">
                         <div>
                             <div class="form-group">
-                                <label for="exampleInputEmail1">Họ và tên</label>
-                                <input type="text" class="form-control" id="name{{ r.id }}" name="name{{ r.id }}" aria-describedby="name{{ r.id }}"
-                                    placeholder="Nhập họ và tên...">
+                                <label for="exampleInputEmail1">CCCD</label>
+                                <input type="number" onblur="searchCustomer(this, '{{ r.id }}')" class="form-control" id="cccd{{ r.id }}" name="cccd{{ r.id }}"
+                                    placeholder="Nhập căn cước công dân...">
                             </div>
                         </div>
                         <div>
@@ -247,11 +247,12 @@
                     <div class="d-flex mt-2 justify-content-around">
                         <div>
                             <div class="form-group">
-                                <label for="exampleInputEmail1">CCCD</label>
-                                <input type="number" class="form-control" id="cccd{{ r.id }}" name="cccd{{ r.id }}"
-                                    placeholder="Nhập căn cước công dân...">
+                                <label for="exampleInputEmail1">Họ và tên</label>
+                                <input type="text" class="form-control" id="name{{ r.id }}" name="name{{ r.id }}" aria-describedby="name{{ r.id }}"
+                                    placeholder="Nhập họ và tên...">
                             </div>
                         </div>
+                        
                         
                         <div>
                             <div class="form-group">
@@ -265,7 +266,7 @@
                     </div>
                     <div class="d-flex justify-content-around mt-2 me-5">
                         <div>
-                            <select class="form-select" aria-label="Default select example" name="type-customer{{ r.id }}">
+                            <select class="form-select" aria-label="Default select example" id="type-customer{{ r.id }}" name="type-customer{{ r.id }}">
                                 <option selected value="DOMESTIC">Khách Trong nước</option>
                                 <option value="FOREIGN">Khách nước ngoài</option>
                               </select>
