--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -90,7 +90,7 @@
                                 Tổng Cộng
                             </div>
                             <div>
-                                <div id="tong" class="sum">{{ '{:,.0f}'.format(cart_stats.total_amount * 0.9) }} VND
+                                <div id="tong" class="sum">{{ '{:,.0f}'.format(cart_stats.total_amount) }} VND
                                 </div>
                             </div>
                         </div>
